# cpu-scheduler-project

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
cpu-scheduler-project/: .gitignore
cpu-scheduler-project/docs/: ARCHITECTURE.md
cpu-scheduler-project/src/gui/: process_table_widget.h  stats_widget.h
cpu-scheduler-project/src/kernel/: scheduler.cpp  scheduler.h
cpu-scheduler-project/src/utils/: logger.cpp  logger.h
kernel_module/: .Module.symvers.cmd  .custom_scheduler.ko.cmd  .custom_scheduler.mod.cmd  .custom_scheduler.mod.o.cmd  .custom_scheduler.o.cmd  .modules.order.cmd  QUICKSTART.md  README.md  REQUIREMENTS_ANALYSIS.md  custom_scheduler.c  custom_scheduler.ko  custom_scheduler.mod  custom_scheduler.mod.c  modules.order
src/: main.cpp
src/gui/: mainwindow.cpp  mainwindow.h  process_table_widget.cpp  stats_widget.cpp
src/kernel/: process.cpp  process.h  ready_queue.cpp  ready_queue.h  spinlock.h
